samples/_failures_safe/1761127659_f1e9b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a14df42.c: In function ‘main’:
./samples/SAFE/__tmp_6a14df42.c:182:5: error: expected expression at end of input
  182 |     if (
      |     ^~
./samples/SAFE/__tmp_6a14df42.c:182:5: error: expected declaration or statement at end of input
